# heist-eval

./: .gitmodules  Main.hs  haskell-heist.cabal  heist-eval.cabal  home.tpl  mafia
templates/: home.tpl  main.tpl
