name:                heist-eval
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Rob Howard
maintainer:          rob@robhoward.id.au
build-type:          Simple
cabal-version:       >=1.10

executable heist-eval
  main-is:             Main.hs

  build-depends:       base >=4.7 && <4.8
                     , blaze-builder >=0.4 && <0.5
                     , bytestring >=0.10 && <0.11
                     , containers
                     , either >=4.4 && <4.5
                     , heist
                     , lens
                     , lifted-base
                     , text
                     , transformers
                     , xmlhtml

  default-language:    Haskell2010
